[package]
name = "kaio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs.git", branch = "master" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "bigdecimal"] }
serde_json = "1.0"
num-bigint = "0.4"
dotenv = "0.15.0"
url = "2.5.2"
bigdecimal = "0.4.5"
num-traits = "0.2.19"
log = "0.4"
env_logger = "0.10"
